build 2 BeanFactory,2 left.GetReq bug left