@@ -16,6 +16,8 @@ import java.lang.reflect.Method;
 public class ReflectionUtil {
 
     /**
+     * 通过反射调用方法
+     * 
      * @param method 目标方法
      * @param args   调用的参数
      * @return 执行结果
@@ -24,12 +26,29 @@ public class ReflectionUtil {
         Object result = null;
         try {
             // 生成方法对应类的对象
-            Object targetObject = method.getDeclaringClass().newInstance();
+            Object targetObject = method.getDeclaringClass().getDeclaredConstructor().newInstance();
             // 调用对象的方法
             result = method.invoke(targetObject, args);
-        } catch (IllegalAccessException | InvocationTargetException | InstantiationException e) {
+        } catch (IllegalAccessException | InvocationTargetException | InstantiationException | IllegalArgumentException | NoSuchMethodException | SecurityException e) {
             e.printStackTrace();
         }
         return result;
+    }
+    
+    /**
+     * 通过反射生成对象
+     *
+     * @param aClass 类的类型
+     * @return 类生成的对象
+     */
+    public static Object newInstance(Class<?> aClass){
+        Object instance = null;
+        try {
+            instance = aClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
+            log.error("实例化对象失败 class: {}", aClass);
+            e.printStackTrace();
+        }
+        return instance;
     }
 }
